Changes from Exeter uni after run through.

--- a/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_mqrg.html
@@ -67,6 +67,7 @@
                                 <li><a href="jr_structures.html">JULES structures</a></li>
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
+                                <li><a href="jr_help_page.html">JULES help</a></li>
                             </ul>
                         </li>
                     </ul>
