--- a/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
@@ -87,6 +87,17 @@
                    I (Kerry Smout-Day) have only had experience installing and
                    running the VM on Mac's.
                 </p>
+                <br/>
+                <p>
+                  To see both the <code>tmp</code> and the <code>u</code> 
+                  repsositories in <code>rosie go</code> by default please
+                  update the following to your <code>~/.metomi/rose.conf</code>
+                  file:
+<pre>
+[rosie-id]
+prefixes-ws-default=tmp u
+</pre>
+                </p>
               </div>
                 <br/>
                 <h2>VM JULES Data</h2>
