--- a/tutorial/bg_info/tutorial_julesrose/jr_jasmin_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_jasmin_setup.html
@@ -54,6 +54,7 @@
                                 <li><a href="jr_structures.html">JULES structures</a></li>
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
+                                <li><a href="jr_help_page.html">JULES help</a></li>
                             </ul>
                         </li>
                     </ul>
