--- a/tutorial/bg_info/tutorial_julesrose/jr_links.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_links.html
@@ -54,6 +54,7 @@
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
                                 <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
+                                <li><a href="jr_help_page.html">JULES help</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -97,6 +98,8 @@
 
                 <h2>Rose/Cylc Links</h2>
                 <a href="http://metomi.github.io/rose/doc/rose.html">Rose Documentation</a>
+                <br/>
+                <a href="http://metomi.github.io/rose/doc/rose-variables.html">Variables available in Rose</a>
                 <br/>
                <a href="https://code.metoffice.gov.uk/trac/roses-u/">Rosie Repository</a> Click on the <code>Browse Source</code> button. Use to looks at JULES-Rose suites, e.g. <a href="https://code.metoffice.gov.uk/trac/roses-u/browser/a/i/8/2/8">u-ai828</a>
                 <br/>
