--- a/tutorial/bg_info/tutorial_julesrose/user_quiz.html
+++ b/tutorial/bg_info/tutorial_julesrose/user_quiz.html
@@ -58,6 +58,7 @@
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
                                 <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
+                                <li><a href="jr_help_page.html">JULES help</a></li>
                             </ul>
                         </li>
                     </ul>
