--- a/tutorial/bg_info/tutorial_julesrose/jr_help_page.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_help_page.html
@@ -55,6 +55,7 @@
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_vm_setup.html">JULES VM setup</a></li>
                                 <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
+                                <li><a href="jr_monsoon_setup.html">JULES MONSooN setup</a></li>
                             </ul>
                         </li>
                     </ul>
