--- a/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_vm_setup.html
@@ -54,6 +54,8 @@
                                 <li><a href="jr_structures.html">JULES structures</a></li>
                                 <li><a href="jr_rosecylc_setup.html">Rose/Cylc setup</a></li>
                                 <li><a href="jr_jasmin_setup.html">JULES JASMIN setup</a></li>
+                                <li><a href="jr_monsoon_setup.html">JULES MONSooN setup</a></li>
+                                <li><a href="jr_help_page.html">JULES Help</a></li>
                             </ul>
                         </li>
                     </ul>
