--- a/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
+++ b/tutorial/bg_info/tutorial_julesrose/jr_monsoon_setup.html
@@ -41,7 +41,7 @@
                                     <li><a href="#ea">External Access</a></li>
                                     <li><a href="#ia">Internal Access</a></li>
                                     <li><a href="#gas">General Access Setup</a></li>
-                                    <li><a href="#am">Access to MONSooN</a></li>
+                                    <li><a href="#sam">Simple Access to MONSooN</a></li>
                             </ul>
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Other material <span class="caret"></span></a>
@@ -82,7 +82,7 @@
                 <li><a href="#ea">External Access</a></li>
                 <li><a href="#ia">Internal Access</a></li>
                 <li><a href="#gas">General Access Setup</a></li>
-                <li><a href="#am">Access to MONSooN</a></li>
+                <li><a href="#sam">Simple Access to MONSooN</a></li>
             </ul>
 
         </div>
@@ -349,10 +349,14 @@ prefixes-ws-default=u
             </div>
         <div class="well">
                 <br/>
-                <h2><a id="am">Access to MONSooN</a></h2>
+                <h2><a id="sam">Simple Access to MONSooN</a></h2>
                 <br/>
                 <br/>
-                <p>IN PROGRESS
+                <p>IN PROGRESS - full guidance is in progress for the new
+                   MONSooN, MONSooN2.
+                   Go live was March 2017, please be patient while I am working
+                   with the MONSooN team to provide simple access instructions
+                   for running JULES on MONSooN.
            </p>
 
             </div>
